--- a/QA_Compumark.htm
+++ b/QA_Compumark.htm
@@ -1,5 +1,6 @@
+<style type='text/css' href='https://qa-clarivatecommunities.cs16.force.com/resource/SLDS_Scoped.css'></style>
 <style type='text/css'>
-    <link rel="stylesheet" href="https://qa-clarivatecommunities.cs16.force.com/resource/SLDS_Scoped"></link>
+    
     .embeddedServiceHelpButton .helpButton .uiButton {
         background-color: #005290;
         font-family: "Arial", sans-serif;
