--- a/QA_Compumark.htm
+++ b/QA_Compumark.htm
@@ -1,4 +1,4 @@
-<style type='text/css' href='https://qa-clarivatecommunities.cs16.force.com/resource/SLDS_Scoped.css'></style>
+<link rel="stylesheet" href="https://qa-clarivatecommunities.cs16.force.com/resource/SLDS_Scoped"></link>
 <style type='text/css'>
     
     .embeddedServiceHelpButton .helpButton .uiButton {
